@@ -20,6 +20,7 @@ package add_host_metadata
 import (
 	"fmt"
 	"net"
+	"sync"
 	"time"
 
 	"github.com/joeshaw/multierror"
@@ -40,9 +41,12 @@ func init() {
 
 type addHostMetadata struct {
 	info       types.HostInfo
-	lastUpdate time.Time
-	data       common.MapStr
-	config     Config
+	lastUpdate struct {
+		time.Time
+		sync.Mutex
+	}
+	data   common.MapStrPointer
+	config Config
 }
 
 const (
@@ -63,42 +67,55 @@ func newHostMetadataProcessor(cfg *common.Config) (processors.Processor, error) 
 	p := &addHostMetadata{
 		info:   h.Info(),
 		config: config,
+		data:   common.NewMapStrPointer(nil),
 	}
+	p.loadData()
 	return p, nil
 }
 
 // Run enriches the given event with the host meta data
 func (p *addHostMetadata) Run(event *beat.Event) (*beat.Event, error) {
 	p.loadData()
-	event.Fields.DeepUpdate(p.data.Clone())
+	event.Fields.DeepUpdate(p.data.Get().Clone())
 	return event, nil
 }
 
-func (p *addHostMetadata) loadData() {
+func (p *addHostMetadata) expired() bool {
+	p.lastUpdate.Lock()
+	defer p.lastUpdate.Unlock()
 
-	// Check if cache is expired
-	if p.lastUpdate.Add(cacheExpiration).Before(time.Now()) {
-		p.data = host.MapHostInfo(p.info)
-
-		if p.config.NetInfoEnabled {
-			// IP-address and MAC-address
-			var ipList, hwList, err = p.getNetInfo()
-			if err != nil {
-				logp.Info("Error when getting network information %v", err)
-			}
-
-			if len(ipList) > 0 {
-				p.data.Put("host.ip", ipList)
-			}
-			if len(hwList) > 0 {
-				p.data.Put("host.mac", hwList)
-			}
-		}
-		p.lastUpdate = time.Now()
+	if p.lastUpdate.Add(cacheExpiration).After(time.Now()) {
+		return false
 	}
+	p.lastUpdate.Time = time.Now()
+	return true
 }
 
-func (p addHostMetadata) getNetInfo() ([]string, []string, error) {
+func (p *addHostMetadata) loadData() {
+	if !p.expired() {
+		return
+	}
+
+	data := host.MapHostInfo(p.info)
+	if p.config.NetInfoEnabled {
+		// IP-address and MAC-address
+		var ipList, hwList, err = p.getNetInfo()
+		if err != nil {
+			logp.Info("Error when getting network information %v", err)
+		}
+
+		if len(ipList) > 0 {
+			data.Put("host.ip", ipList)
+		}
+		if len(hwList) > 0 {
+			data.Put("host.mac", hwList)
+		}
+	}
+
+	p.data.Set(data)
+}
+
+func (p *addHostMetadata) getNetInfo() ([]string, []string, error) {
 	var ipList []string
 	var hwList []string
 
@@ -143,7 +160,7 @@ func (p addHostMetadata) getNetInfo() ([]string, []string, error) {
 	return ipList, hwList, errs.Err()
 }
 
-func (p addHostMetadata) String() string {
+func (p *addHostMetadata) String() string {
 	return fmt.Sprintf("%v=[netinfo.enabled=[%v]]",
 		processorName, p.config.NetInfoEnabled)
 }
